--- a/my-momo/deployment.yaml
+++ b/my-momo/deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: momo-deployment
+  name: wordsmith-web-deployment
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: momo
+      app: wordsmith-web
   template:
     metadata:
       labels:
-        app: momo
+        app: wordsmith-web
     spec:
       containers:
-      - name: momo
-        image: malingmania/momo:latest
+      - name: wordsmith-web
+        image: mwene/wordsmith-web:latest
         ports:
         - containerPort: 80
