--- a/my-momo/service.yaml
+++ b/my-momo/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: momo-service
+  name: wordsmith-web-service
 spec:
   type: NodePort
   selector:
-    app: momo
+    app: wordsmith-web
   ports:
   - port: 80
     targetPort: 80
